--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "browser-sync-webpack-plugin": "^1.2.0",
     "cross-env": "^5.1.0",
     "laravel-mix": "^1.5.1",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "vue": "^2.5.2",
+    "vue-loader": "^13.3.0",
+    "vue-template-compiler": "^2.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
