now copying images to public/img from src/img as part of the build process

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/public/js/main.js": "/public/js/main.js",
-    "/public/css/main.css": "/public/css/main.css"
+    "/public/css/main.css": "/public/css/main.css",
+    "/public/img/022T0134_preview.jpg": "/public/img/022T0134_preview.jpg",
+    "/public/img/alcatraz_prison_block_cc_img.jpg": "/public/img/alcatraz_prison_block_cc_img.jpg",
+    "/public/img/HMPPS_WHITE_AW.png": "/public/img/HMPPS_WHITE_AW.png",
+    "/public/img/hmpps-logo.png": "/public/img/hmpps-logo.png"
 }
