generating password file from environment variable

--- a/temp-auth/.htaccess
+++ b/temp-auth/.htaccess
@@ -1,6 +1,6 @@
 AuthType Basic
 AuthName "Restricted access"
-AuthUserFile "/app/public/.htpasswd"
+AuthUserFile "/app/public/.htpass"
 Require valid-user
 
 #RewriteEngine On
