removed unused waypoints.js

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "scrollpoints": "^0.4.0",
     "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.5.2",
-    "waypoints": "^4.0.1"
+    "vue-template-compiler": "^2.5.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
