--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "browser-sync": "^2.18.13",
     "browser-sync-webpack-plugin": "^1.2.0",
     "cross-env": "^5.1.0",
+    "jquery": "^3.2.1",
     "laravel-mix": "^1.5.1",
     "node-sass": "^4.5.3",
     "scrollpoints": "^0.4.0",
     "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
+    "vue-slick": "^1.1.12",
     "vue-template-compiler": "^2.5.2"
   },
   "scripts": {
