moved all files to separate folder 'bedrock' for now

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-/meta/
+/ppj-theme/meta/
 .idea/
-/node_modules/
-/public/css/
-/public/img/
-/public/js/
-/public/fonts/
-/public/*.html
-/vendor/
-temp-auth/.htpasswd
-mix-manifest.json
+/ppj-theme/node_modules/
+/ppj-theme/public/css/
+/ppj-theme/public/img/
+/ppj-theme/public/js/
+/ppj-theme/public/fonts/
+/ppj-theme/public/*.html
+/ppj-theme/vendor/
+/ppj-theme/temp-auth/.htpasswd
+/ppj-theme/mix-manifest.json
+
