moving files in anticipation of new bedrock file structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-/ppj-theme/meta/
 .idea/
-/ppj-theme/node_modules/
-/ppj-theme/public/css/
-/ppj-theme/public/img/
-/ppj-theme/public/js/
-/ppj-theme/public/fonts/
-/ppj-theme/public/*.html
-/ppj-theme/vendor/
-/ppj-theme/temp-auth/.htpasswd
-/ppj-theme/mix-manifest.json
-
+/web/app/themes/ppj/meta/
+/web/app/themes/ppj/node_modules/
+/web/app/themes/ppj/public/css/
+/web/app/themes/ppj/public/img/
+/web/app/themes/ppj/public/js/
+/web/app/themes/ppj/public/fonts/
+/web/app/themes/ppj/public/*.html
+/web/app/themes/ppj/vendor/
+/web/app/themes/ppj/temp-auth/.htpasswd
+/web/app/themes/ppj/mix-manifest.json
