--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .idea/
 
 # Application
+web/app/debug.log
 web/app/plugins/*
 !web/app/plugins/.gitkeep
 web/app/mu-plugins/*/
@@ -12,11 +13,11 @@ web/app/uploads/*
 
 /web/app/themes/ppj/meta/
 /web/app/themes/ppj/node_modules/
-/web/app/themes/ppj/public/css/
-/web/app/themes/ppj/public/img/
-/web/app/themes/ppj/public/js/
-/web/app/themes/ppj/public/fonts/
-/web/app/themes/ppj/public/*.html
+/web/app/themes/ppj/dest/css/
+/web/app/themes/ppj/dest/img/
+/web/app/themes/ppj/dest/js/
+/web/app/themes/ppj/dest/fonts/
+/web/app/themes/ppj/dest/*.html
 /web/app/themes/ppj/vendor/
 /web/app/themes/ppj/temp-auth/.htpasswd
 /web/app/themes/ppj/mix-manifest.json
