--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -11,11 +11,11 @@
     "scrollpoints": "^0.4.0",
     "vue": "^2.5.8",
     "vue-loader": "^13.5.0",
-    "vue-slick": "^1.1.12",
+    "vue-slick": "^1.1.12"
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
-    "browser-sync-webpack-plugin": "^1.2.0",
+    "browser-sync-webpack-plugin": "^1.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
