--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.17.1",
     "cross-env": "^5.1.3",
     "jquery": "^3.2.1",
     "laravel-mix": "^1.7.2",
