--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "roots/wp-password-bcrypt": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
     "acf/advanced-custom-fields-pro": "*",
-    "wpackagist-plugin/ga-google-analytics": "20171103"
+    "wpackagist-plugin/ga-google-analytics": "20171103",
+    "wpackagist-plugin/uk-cookie-consent": "2.3.9"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
