--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -10,6 +10,7 @@
     "laravel-mix": "^1.7.2",
     "marked": "^0.3.9",
     "node-sass": "^4.7.2",
+    "npm": "^5.7.1",
     "scrollpoints": "^0.4.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
