--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ web/app/debug.log
 web/app/plugins/*
 !web/app/plugins/.gitkeep
 web/app/mu-plugins/*/
+!web/app/mu-plugins/load.php
+!web/app/mu-plugins/ppj/
 web/app/upgrade
 web/app/languages
 web/app/uploads/*
