--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
     "acf/advanced-custom-fields-pro": "*",
     "wpackagist-plugin/ga-google-analytics": "20171103",
-    "wpackagist-plugin/uk-cookie-consent": "2.3.9"
+    "wpackagist-plugin/uk-cookie-consent": "2.3.9",
+    "wpackagist-plugin/wp-browser-update": "^2.4"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
