--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,10 @@
     "roots/wp-password-bcrypt": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
     "acf/advanced-custom-fields-pro": "*",
-    "wpackagist-plugin/ga-google-analytics": "20171103",
-    "wpackagist-plugin/uk-cookie-consent": "2.3.9",
-    "wpackagist-plugin/wp-browser-update": "^2.4"
+    "wpackagist-plugin/ga-google-analytics": "*",
+    "wpackagist-plugin/uk-cookie-consent": "*",
+    "wpackagist-plugin/wp-browser-update": "*",
+    "wpackagist-plugin/safe-redirect-manager": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
