--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "cross-env": "^5.1.3",
+    "details-element-polyfill": "^2.0.1",
     "jquery": "^3.2.1",
     "laravel-mix": "^1.7.2",
     "marked": "^0.3.9",
