--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^4.9.0",
     "npm": "^5.10.0",
     "scrollpoints": "^0.4.0",
+    "url-search-params-polyfill": "^4.0.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.6.2",
     "vue-template-compiler": "^2.5.13"
