--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.17.1",
-    "cross-env": "^5.1.5",
+    "cross-env": "^5.1.6",
+    "debounce": "^1.1.0",
     "details-element-polyfill": "^2.0.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "laravel-mix": "^1.7.2",
-    "marked": "^0.3.9",
+    "marked": "^0.3.19",
     "node-sass": "^4.9.0",
     "npm": "^5.10.0",
     "scrollpoints": "^0.4.0",
     "url-search-params-polyfill": "^4.0.0",
-    "vue": "^2.5.13",
-    "vue-loader": "^13.6.2",
-    "vue-template-compiler": "^2.5.13"
+    "vue": "^2.5.16",
+    "vue-loader": "^13.7.2",
+    "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
     "browser-sync": "^2.24.4",
