--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.17.1",
+    "ajv": "^6.10.0",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "debounce": "^1.1.0",
+    "debounce": "^1.2.0",
     "details-element-polyfill": "^2.0.1",
+    "imagemin": "^6.1.0",
     "jquery": "^3.3.1",
-    "laravel-mix": "^1.7.2",
     "marked": "^0.3.19",
-    "node-sass": "^4.9.0",
-    "npm": "^5.10.0",
+    "npm": "^6.4.1",
     "scrollpoints": "^0.4.0",
     "url-search-params-polyfill": "^4.0.0",
     "vue": "^2.5.16",
@@ -20,8 +20,13 @@
     "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
-    "browser-sync": "^2.24.5",
-    "browser-sync-webpack-plugin": "^1.2.0"
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.0.1",
+    "laravel-mix": "^4.0.14",
+    "node-sass": "^4.11.0",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.17.2",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
