Upgrade WP to v5.2

--- a/docker/conf/nginx/server.conf
+++ b/docker/conf/nginx/server.conf
@@ -51,7 +51,7 @@ server {
 	# Empty location blocks here to allow access even when "/" location
 	# sends HTTP 503 during maintenance mode
 	location /app/themes/ppj/error-pages/ { }
-	location /app/themes/ppj/dest/ { }
+	location /app/themes/ppj/dist/ { }
 	location /wp/readme.html { }
 
 	##
