--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "wpackagist-plugin/uk-cookie-consent": "*",
     "wpackagist-plugin/wp-browser-update": "*",
     "wpackagist-plugin/safe-redirect-manager": "*",
+    "wpackagist-plugin/fast-user-switching": "*",
     "wpackagist-plugin/classic-editor": "*"
   },
   "require-dev": {
