--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "wpackagist-plugin/wp-browser-update": "*",
     "wpackagist-plugin/safe-redirect-manager": "*",
     "wpackagist-plugin/fast-user-switching": "*",
-    "wpackagist-plugin/classic-editor": "*"
+    "wpackagist-plugin/classic-editor": "*",
+    "wpackagist-plugin/revisionary": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
