--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,14 @@
     "roots/wp-password-bcrypt": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
     "acf/advanced-custom-fields-pro": "*",
-    "wpackagist-plugin/uk-cookie-consent": "*",
     "wpackagist-plugin/wp-browser-update": "*",
     "wpackagist-plugin/safe-redirect-manager": "*",
     "wpackagist-plugin/fast-user-switching": "*",
     "wpackagist-plugin/classic-editor": "*",
     "ministryofjustice/wp-user-roles": "*",
     "ministryofjustice/wp-moj-social-share": "*",
-    "ministryofjustice/wp-moj-components": "^1.1.4"
+    "ministryofjustice/wp-moj-components": "^1.1.4",
+    "ministryofjustice/cookie-compliance-for-wordpress": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
