--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     "php": ">=7.1",
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "*",
-    "koodimonni-language/core-en_gb": "*",
+    "johnpbloch/wordpress": "5.2.4",
+    "koodimonni-language/core-en_gb": "5.2.4",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
@@ -35,7 +35,7 @@
     "wpackagist-plugin/classic-editor": "*",
     "ministryofjustice/wp-user-roles": "*",
     "ministryofjustice/wp-moj-social-share": "*",
-    "ministryofjustice/wp-moj-components": "^1.1.4",
+    "ministryofjustice/wp-moj-components": "*",
     "ministryofjustice/cookie-compliance-for-wordpress": "*"
   },
   "require-dev": {
@@ -46,8 +46,7 @@
     "installer-paths": {
       "web/app/mu-plugins/{$name}/": [
         "type:wordpress-muplugin",
-        "ministryofjustice/wp-user-roles",
-        "ministryofjustice/wp-moj-components"
+        "ministryofjustice/wp-user-roles"
       ],
       "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/app/themes/{$name}/": ["type:wordpress-theme"]
