--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,9 @@
     "ministryofjustice/wp-user-roles": "*",
     "ministryofjustice/wp-moj-social-share": "*",
     "ministryofjustice/wp-moj-components": "*",
-    "ministryofjustice/cookie-compliance-for-wordpress": "*"
+    "ministryofjustice/cookie-compliance-for-wordpress": "*",
+    "wpackagist-plugin/wp-analytify":"2.2.13",
+    "wpackagist-plugin/analytify-analytics-dashboard-widget":"1.1.2"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
