--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,8 @@
     "ministryofjustice/wp-moj-social-share": "*",
     "ministryofjustice/wp-moj-components": "*",
     "ministryofjustice/cookie-compliance-for-wordpress": "*",
-    "wpackagist-plugin/wp-analytify":"2.2.13",
-    "wpackagist-plugin/analytify-analytics-dashboard-widget":"1.1.2"
+    "wpackagist-plugin/wp-analytify":"*",
+    "wpackagist-plugin/analytify-analytics-dashboard-widget":"*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
