--- a/web/app/themes/ppj/package.json
+++ b/web/app/themes/ppj/package.json
@@ -8,28 +8,30 @@
     "url": "git://github.com/roots/roots.git"
   },
   "dependencies": {
-    "ajv": "^6.12.6",
-    "axios": "^0.21.1",
-    "debounce": "^1.2.1",
-    "jquery": "^3.6.0",
+    "ajv": "^6.12.4",
+    "axios": "^0.20.0",
+    "debounce": "^1.2.0",
+    "jquery": "^3.5.1",
     "vue": "^2.6.12",
-    "vue-loader": "^15.9.6",
+    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
     "details-element-polyfill": "^2.4.0",
-    "laravel-mix": "^5.0.9",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.0",
+    "laravel-mix": "^6.0.25",
+    "postcss": "^8.3.5",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "vue-template-compiler": "^2.6.12",
     "scrollpoints": "^0.4.0",
     "url-search-params-polyfill": "^8.1.1"
   },
   "scripts": {
-    "dev": "NODE_ENV=development webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "NODE_ENV=development webpack --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "NODE_ENV=development webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "NODE_ENV=development webpack --watch --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "NODE_ENV=production webpack --progress --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "author": "",
   "license": "ISC"
