--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
     "johnpbloch/wordpress": "6.0.1",
-    "koodimonni-language/core-en_gb": "*",
+    "koodimonni-language/core-en_gb": "6.0.1",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
