--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,12 @@
   "type": "project",
   "description": "A starter project for WordPress in MOJ using docker",
   "config": {
-    "preferred-install": "dist"
+    "preferred-install": "dist",
+    "allow-plugins": {
+      "composer/installers": true,
+      "johnpbloch/wordpress-core-installer": true,
+      "koodimonni/composer-dropin-installer": true
+    }
   },
   "repositories": [
     {
@@ -23,8 +28,8 @@
     "php": ">=7.1",
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "6.0.1",
-    "koodimonni-language/core-en_gb": "6.0.1",
+    "johnpbloch/wordpress": "*",
+    "koodimonni-language/core-en_gb": "*",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "*",
@@ -35,8 +40,7 @@
     "ministryofjustice/wp-user-roles": "*",
     "ministryofjustice/wp-moj-components": "*",
     "ministryofjustice/cookie-compliance-for-wordpress": "*",
-    "wpackagist-plugin/wp-analytify":"*",
-    "wpackagist-plugin/analytify-analytics-dashboard-widget":"*"
+    "ministryofjustice/wp-gov-uk-notify": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
